Se agrega el maquetado básico de la página.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>TWITTER</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Nunito|Quicksand" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
@@ -10,10 +10,12 @@
   <body>
     <header></header>
     <main>
-      <section id="perfil"></section>
-      <section>
-        <form class="" action="index.html" method="post">
-
+      <section id="profile" class="sections"></section>
+      <section id="section-of-the-form" class="sections">
+        <form id="form"  action="index.html" method="post">
+          <textarea id="text-area" name="name" rows="4" cols="50" placeholder="¿Qué estás pensando?"></textarea>
+          <hr>
+          <button id="button-tweet" class="font1" type="button" name="button"><strong>TWEET</strong></button>
         </form>
       </section>
     </main>
