--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   </head>
   <body>
     <header></header>
-    <main>
+    <main id="main">
       <section id="profile" class="sections"></section>
       <section id="section-of-the-form" class="sections">
         <form id="form"  action="index.html" method="post">
           <textarea id="text-area" name="name" rows="4" cols="50" placeholder="¿Qué estás pensando?"></textarea>
           <hr>
-          <button id="button-tweet" class="font1" type="button" name="button"><strong>TWEET</strong></button>
+          <button id="button-tweet" class="" type="button" name="button"><strong>TWEET</strong></button>
         </form>
       </section>
     </main>
