Se agrega imagen de fondo y se detalla el estilo general de la página.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <header></header>
+    <header><img src="assets/images/logo.png" alt=""> </header>
     <main id="main">
       <section id="profile" class="sections"></section>
       <section id="section-of-the-form" class="sections">
         <form id="form"  action="index.html" method="post">
           <textarea id="text-area" name="name" rows="4" cols="50" placeholder="¿Qué estás pensando?"></textarea>
           <hr>
-          <button id="button-tweet" class="" type="button" name="button"><strong>TWEET</strong></button>
+          <button id="button-tweet"  type="button" name="button"><strong>TWEET</strong></button>
         </form>
       </section>
     </main>
